--- a/src/components/Form/index.css
+++ b/src/components/Form/index.css
@@ -3,7 +3,22 @@
   margin: 0 auto;
   display: block;
   padding: 16px;
-  border: 1px solid black;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.Form__container:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.Form__title {
+  text-align: center;
+}
+
+.Form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .Form__input {
@@ -12,7 +27,7 @@
   border-bottom: 1px solid;
   padding: 4px;
   outline: none;
-  width: 100%;
+  width: 90%;
 }
 
 .Form__button {
